--- a/views/admin-panel.ejs
+++ b/views/admin-panel.ejs
@@ -77,13 +77,13 @@
 
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
-    <link rel="stylesheet" href="../public/css/main.css" />
-    <link rel="stylesheet" href="../public/css\page-css\admin-panel.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css\page-css\admin-panel.css" />
     
 
-    <script defer type="text/javascript" src="../public/js/admin-panel.js"></script>
+    <script defer type="text/javascript" src="/js/admin-panel.js"></script>
   </head>
 
   <body>
@@ -94,7 +94,7 @@
             <a id="b-btn">Go Back</a>
           </div>
           <div class="institute-logo">
-            <img src="../public/assets\Screenshot 2022-04-10 235928.png" alt="" />
+            <img src="/assets\Screenshot 2022-04-10 235928.png" alt="" />
           </div>
         </div>
         <div class="mid-div">
@@ -104,7 +104,7 @@
                 <div class="option-icon">
                   <img
                     id="news-img"
-                    src="../public/assets/option-icon-active.svg"
+                    src="/assets/option-icon-active.svg"
                     alt=""
                   />
                 </div>
@@ -116,7 +116,7 @@
                 <div class="option-icon">
                   <img
                     id="events-img"
-                    src="../public/assets/option-icon-inactive.svg"
+                    src="/assets/option-icon-inactive.svg"
                     alt=""
                   />
                 </div>
