--- a/views/contact-page.ejs
+++ b/views/contact-page.ejs
@@ -78,15 +78,15 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
-    <link rel="stylesheet" href="../public/css\main.css" />
-    <link rel="stylesheet" href="../public/css\page-css\contact-page.css" />
+    <link rel="stylesheet" href="/css\main.css" />
+    <link rel="stylesheet" href="/css\page-css\contact-page.css" />
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
-    <script defer type="text/javascript" src="../public/js/main.js"></script>
+    <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
   <body>
@@ -97,7 +97,7 @@
           <div class="heading-c">
             <h1>Welcome Message</h1>
             <div class="line-style">
-              <img src="../public/assets\Vector 8.svg" alt="line image" />
+              <img src="/assets\Vector 8.svg" alt="line image" />
             </div>
           </div>
           <p>
@@ -128,7 +128,7 @@
             <div class="heading-c">
               <h1>Placement Faculty Incharge and TPO</h1>
               <div class="line-style">
-                <img src="../public/assets\Vector 8.svg" alt="line image" />
+                <img src="/assets\Vector 8.svg" alt="line image" />
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
             <div class="contact-cards">
               <div class="contact-card">
                 <div class="card-img">
-                  <img src="../public/assets\Gaurav.jpg" alt="card image" />
+                  <img src="/assets\Gaurav.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Dr. Gaurav Kumar</h3>
@@ -156,7 +156,7 @@
               <div class="contact-card">
                 <div class="card-img">
                   <img
-                    src="../public/assets\Sangeeta_sharma.jpg"
+                    src="/assets\Sangeeta_sharma.jpg"
                     alt="card image"
                   />
                 </div>
@@ -182,13 +182,13 @@
           <div class="heading-c">
             <h1>Coordinators: 2023 Batch</h1>
             <div class="line-style">
-              <img src="../public/assets/Vector 8.svg" alt="line image" />
+              <img src="/assets/Vector 8.svg" alt="line image" />
             </div>
           </div>
           <div class="team-grid">
             <div class="team-card">
               <div class="card-img">
-                <img src="../public/assets/Shiva Patel.svg" alt="card image" />
+                <img src="/assets/Shiva Patel.svg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Shiva Patel</h3>
@@ -211,7 +211,7 @@
             <div class="team-card">
               <div class="card-img">
                 <img
-                  src="../public/assets/Rishabh Agrawal.svg"
+                  src="/assets/Rishabh Agrawal.svg"
                   alt="card image"
                 />
               </div>
@@ -235,7 +235,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img src="../public/assets/Sohail.svg" alt="card image" />
+                <img src="/assets/Sohail.svg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Sohail Khan</h3>
@@ -254,7 +254,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img src="../public/assets/Sumanth.jpeg" alt="card image" />
+                <img src="/assets/Sumanth.jpeg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>ADARI SAI SUMANTH</h3>
@@ -277,7 +277,7 @@
             <div class="team-card">
               <div class="card-img">
                 <img
-                  src="../public/assets/Tarun Kannaojia.svg"
+                  src="/assets/Tarun Kannaojia.svg"
                   alt="card image"
                 />
               </div>
@@ -302,7 +302,7 @@
             <div class="team-card">
               <div class="card-img">
                 <img
-                  src="../public/assets/Isha Chaudhary.svg"
+                  src="/assets/Isha Chaudhary.svg"
                   alt="card image"
                 />
               </div>
@@ -327,7 +327,7 @@
             <div class="team-card">
               <div class="card-img">
                 <img
-                  src="../public/assets/Divya Bhattacharya.svg"
+                  src="/assets/Divya Bhattacharya.svg"
                   alt="card image"
                 />
               </div>
@@ -352,7 +352,7 @@
             <div class="team-card">
               <div class="card-img">
                 <img
-                  src="../public/assets/Rishabh Hanselia.svg"
+                  src="/assets/Rishabh Hanselia.svg"
                   alt="card image"
                 />
               </div>
@@ -376,7 +376,7 @@
             </div>
             <!-- <div class="team-card">
                         <div class="card-img">
-                            <img src="../public/assets\prateek.jpg" alt="card image" />
+                            <img src="/assets\prateek.jpg" alt="card image" />
                         </div>
                         <div class="card-content">
                             <h3>Prateek Chandra</h3>
@@ -386,7 +386,7 @@
                     </div>
                     <div class="team-card">
                         <div class="card-img">
-                            <img src="../public/assets\prem.jpg" alt="card image" />
+                            <img src="/assets\prem.jpg" alt="card image" />
                         </div>
                         <div class="card-content">
                             <h3>Prem Kumar</h3>
@@ -396,7 +396,7 @@
                     </div>
                     <div class="team-card">
                         <div class="card-img">
-                            <img src="../public/assets\prateek.jpg" alt="card image" />
+                            <img src="/assets\prateek.jpg" alt="card image" />
                         </div>
                         <div class="card-content">
                             <h3>Prateek Chandra</h3>
@@ -410,13 +410,13 @@
           <div class="heading-c">
             <h1>Coordinators: 2024 Batch</h1>
             <div class="line-style">
-              <img src="../public/assets/Vector 8.svg" alt="line image" />
+              <img src="/assets/Vector 8.svg" alt="line image" />
             </div>
           </div>
           <div class="team-grid">
             <div class="team-card">
               <div class="card-img">
-                <img src="../public/assets\prem.jpg" alt="card image" />
+                <img src="/assets\prem.jpg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Prem Kumar</h3>
@@ -435,7 +435,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img src="../public/assets\prateek.jpg" alt="card image" />
+                <img src="/assets\prateek.jpg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Prateek Chandra</h3>
@@ -455,7 +455,7 @@
             <div class="team-card">
               <div class="card-img">
                 <img
-                  src="../public/assets/harshit sharma.jpeg"
+                  src="/assets/harshit sharma.jpeg"
                   alt="card image"
                 />
               </div>
@@ -477,7 +477,7 @@
             <div class="team-card">
               <div class="card-img">
                 <img
-                  src="../public/assets/harshit pandey.jpeg"
+                  src="/assets/harshit pandey.jpeg"
                   alt="card image"
                 />
               </div>
@@ -498,7 +498,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img src="../public/assets/rajiv.jpeg" alt="card image" />
+                <img src="/assets/rajiv.jpeg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Rajiv Ranjan</h3>
@@ -517,7 +517,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img src="../public/assets/saurabh.JPG" alt="card image" />
+                <img src="/assets/saurabh.JPG" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Saurabh Kumar</h3>
