--- a/views/director-page.ejs
+++ b/views/director-page.ejs
@@ -73,14 +73,14 @@
     <meta name="og:region" content="Bhagalpur" />
     <meta name="og:postal-code" content="813210" />
     <meta name="og:country-name" content="INDIA" />
-    <link rel="stylesheet" href="../public/css\main.css" />
-    <link rel="stylesheet" href="../public/css\page-css\director-page.css" />
+    <link rel="stylesheet" href="/css\main.css" />
+    <link rel="stylesheet" href="/css\page-css\director-page.css" />
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
 
-    <script defer type="text/javascript" src="../public/js/main.js"></script>
+    <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
   <body>
@@ -91,7 +91,7 @@
           <div class="heading">
             <h1>Director's Message</h1>
             <div class="line-style">
-              <img src="../public/assets\Vector 8.svg" alt="line image" />
+              <img src="/assets\Vector 8.svg" alt="line image" />
             </div>
           </div>
           <div class="social">
@@ -120,7 +120,7 @@
             </p>
           </div>
           <div class="image-d">
-            <img src="../public/assets\director.jpg" alt="director image" />
+            <img src="/assets\director.jpg" alt="director image" />
           </div>
         </div>
         <p class="new">
