--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -77,16 +77,16 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
-    <link rel="stylesheet" href="../public/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
-    <link rel="stylesheet" href="../public/css\page-css\faq.css" />
+    <link rel="stylesheet" href="/css\page-css\faq.css" />
 
-    <script src="../public/js/faq.js"></script>
+    <script src="/js/faq.js"></script>
   </head>
 
   <body>
@@ -94,7 +94,7 @@
     <section class="faq-section">
       <div class="faq-container">
         <div class="image">
-          <img src="../public/assets/faq-graphics.svg" alt="" />
+          <img src="/assets/faq-graphics.svg" alt="" />
         </div>
         <div class="title">
           <h2>FAQs</h2>
