--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,7 +2,7 @@
     <div class="container-footer">
       <div class="row-top">
         <div class="logo">
-          <img src="../public/assets/square-logo.png" alt="" />
+          <img src="/assets/square-logo.png" alt="" />
         </div>
         <div class="buttons">
           <!-- <a href="#" class="btn btn-primary">Get Started</a> -->
