--- a/views/for-recruiters.ejs
+++ b/views/for-recruiters.ejs
@@ -77,23 +77,23 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
 
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
-    <link rel="stylesheet" href="../public/css\main.css" />
-    <link rel="stylesheet" href="../public/css\page-css\for-recruiters.css" />
+    <link rel="stylesheet" href="/css\main.css" />
+    <link rel="stylesheet" href="/css\page-css\for-recruiters.css" />
 
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script
       defer
       type="text/javascript"
-      src="../public/js/for-recriters.js"
+      src="/js/for-recriters.js"
     ></script>
-    <script defer type="text/javascript" src="../public/js/main.js"></script>
+    <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
   <body>
@@ -112,7 +112,7 @@
             <div class="card">
               <div class="card-img-fr">
                 <img
-                  src="../public/assets/placement-banner.jpg"
+                  src="/assets/placement-banner.jpg"
                   alt="placement-1"
                 />
               </div>
@@ -193,7 +193,7 @@
             <div class="card">
               <div class="card-img-fr">
                 <img
-                  src="../public/assets/facilities-banner.jpeg"
+                  src="/assets/facilities-banner.jpeg"
                   alt="placement-1"
                 />
               </div>
@@ -222,7 +222,7 @@
             <div class="card">
               <div class="card-img-fr">
                 <img
-                  src="../public/assets/demographics-banner.jpg"
+                  src="/assets/demographics-banner.jpg"
                   alt="placement-1"
                 />
               </div>
@@ -231,13 +231,13 @@
                   <h2>Demographics Branchwise</h2>
                   <li>Final Year (2019-2023 Batch ) Department Wise</li>
                   <!-- <img
-                    src="../public/assets/departement-wise-graph.png"
+                    src="/assets/departement-wise-graph.png"
                     alt="departement-wise-graph"
                   /> -->
                   <div id="final1" class="charts"></div>
                   <li>Pre Final Year (2020-2024 Batch) Department Wise</li>
                   <!-- <img
-                    src="../public/assets/pre-final-year-branchwise-graph.png"
+                    src="/assets/pre-final-year-branchwise-graph.png"
                     alt="pre-final-year-department-wise-graph"
                   /> -->
                   <div id="pre-final1" class="charts"></div>
@@ -246,12 +246,12 @@
                   <h2>Demographics State wise</h2>
                   <li>BTech Final Year (2017-2021 Batch) State Wise</li>
                   <img
-                    src="../public/assets/State-wise-graph.png"
+                    src="/assets/State-wise-graph.png"
                     alt="state-wise-graph"
                   />
                   <li>BTech Pre Final Year (2018-2022 Batch ) State Wise</li>
                   <img
-                    src="../public/assets/pre-final-year-state-wise.png"
+                    src="/assets/pre-final-year-state-wise.png"
                     alt="pre-final-year-state-wise-graph"
                   />
                 </ul>
@@ -276,7 +276,7 @@
             <div class="contact-cards">
               <div class="contact-card">
                 <div class="card-img">
-                  <img src="../public/assets\Gaurav.jpg" alt="card image" />
+                  <img src="/assets\Gaurav.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Dr. Gaurav Kumar</h3>
@@ -294,7 +294,7 @@
               <div class="contact-card">
                 <div class="card-img">
                   <img
-                    src="../public/assets\Sangeeta_sharma.jpg"
+                    src="/assets\Sangeeta_sharma.jpg"
                     alt="card image"
                   />
                 </div>
@@ -319,7 +319,7 @@
               <div class="team-grid">
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sohail.svg" alt="card image" />
+                    <img src="/assets/Sohail.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Sohail Khan</h3>
@@ -339,7 +339,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Shiva Patel.svg"
+                      src="/assets/Shiva Patel.svg"
                       alt="card image"
                     />
                   </div>
@@ -364,7 +364,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Agrawal.svg"
+                      src="/assets/Rishabh Agrawal.svg"
                       alt="card image"
                     />
                   </div>
@@ -388,7 +388,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prem.jpg" alt="card image" />
+                    <img src="/assets\prem.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prem Kumar</h3>
@@ -407,7 +407,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prateek.jpg" alt="card image" />
+                    <img src="/assets\prateek.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prateek Chandra</h3>
@@ -427,7 +427,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Isha Chaudhary.svg"
+                      src="/assets/Isha Chaudhary.svg"
                       alt="card image"
                     />
                   </div>
@@ -452,7 +452,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Divya Bhattacharya.svg"
+                      src="/assets/Divya Bhattacharya.svg"
                       alt="card image"
                     />
                   </div>
@@ -477,7 +477,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Tarun Kannaojia.svg"
+                      src="/assets/Tarun Kannaojia.svg"
                       alt="card image"
                     />
                   </div>
@@ -501,7 +501,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sumanth.jpeg" alt="card image" />
+                    <img src="/assets/Sumanth.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>ADARI SAI SUMANTH</h3>
@@ -524,7 +524,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Hanselia.svg"
+                      src="/assets/Rishabh Hanselia.svg"
                       alt="card image"
                     />
                   </div>
@@ -630,7 +630,7 @@
             <div class="card">
               <div class="card-img-fr">
                 <img
-                  src="../public/assets/placement-banner.jpg"
+                  src="/assets/placement-banner.jpg"
                   alt="placement-1"
                 />
               </div>
@@ -711,7 +711,7 @@
             <div class="card">
               <div class="card-img-fr">
                 <img
-                  src="../public/assets/facilities-banner.jpeg"
+                  src="/assets/facilities-banner.jpeg"
                   alt="placement-1"
                 />
               </div>
@@ -740,7 +740,7 @@
             <div class="card">
               <div class="card-img-fr">
                 <img
-                  src="../public/assets/demographics-banner.jpg"
+                  src="/assets/demographics-banner.jpg"
                   alt="placement-1"
                 />
               </div>
@@ -749,13 +749,13 @@
                   <h2>Demographics Branchwise</h2>
                   <li>Final Year (2019-2023 Batch ) Department Wise</li>
                   <!-- <img
-                    src="../public/assets/departement-wise-graph.png"
+                    src="/assets/departement-wise-graph.png"
                     alt="departement-wise-graph"
                   /> -->
                   <div id="final-mob1" class="charts"></div>
                   <li>Pre Final Year (2020-2024 Batch) Department Wise</li>
                   <!-- <img
-                    src="../public/assets/pre-final-year-branchwise-graph.png"
+                    src="/assets/pre-final-year-branchwise-graph.png"
                     alt="pre-final-year-department-wise-graph"
                   /> -->
                   <div id="pre-final-mob1" class="charts"></div>
@@ -764,12 +764,12 @@
                   <h2>Demographics State wise</h2>
                   <li>BTech Final Year (2017-2021 Batch) State Wise</li>
                   <img
-                    src="../public/assets/State-wise-graph.png"
+                    src="/assets/State-wise-graph.png"
                     alt="state-wise-graph"
                   />
                   <li>BTech Pre Final Year (2018-2022 Batch ) State Wise</li>
                   <img
-                    src="../public/assets/pre-final-year-state-wise.png"
+                    src="/assets/pre-final-year-state-wise.png"
                     alt="pre-final-year-state-wise-graph"
                   />
                 </ul>
@@ -794,7 +794,7 @@
             <div class="contact-cards">
               <div class="contact-card">
                 <div class="card-img">
-                  <img src="../public/assets\Gaurav.jpg" alt="card image" />
+                  <img src="/assets\Gaurav.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Dr. Gaurav Kumar</h3>
@@ -814,7 +814,7 @@
               <div class="contact-card">
                 <div class="card-img">
                   <img
-                    src="../public/assets\Sangeeta_sharma.jpg"
+                    src="/assets\Sangeeta_sharma.jpg"
                     alt="card image"
                   />
                 </div>
@@ -839,7 +839,7 @@
               <div class="team-grid">
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sohail.svg" alt="card image" />
+                    <img src="/assets/Sohail.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Sohail Khan</h3>
@@ -859,7 +859,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Shiva Patel.svg"
+                      src="/assets/Shiva Patel.svg"
                       alt="card image"
                     />
                   </div>
@@ -884,7 +884,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Agrawal.svg"
+                      src="/assets/Rishabh Agrawal.svg"
                       alt="card image"
                     />
                   </div>
@@ -909,7 +909,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Isha Chaudhary.svg"
+                      src="/assets/Isha Chaudhary.svg"
                       alt="card image"
                     />
                   </div>
@@ -934,7 +934,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Divya Bhattacharya.svg"
+                      src="/assets/Divya Bhattacharya.svg"
                       alt="card image"
                     />
                   </div>
@@ -959,7 +959,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Tarun Kannaojia.svg"
+                      src="/assets/Tarun Kannaojia.svg"
                       alt="card image"
                     />
                   </div>
@@ -983,7 +983,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sumanth.jpeg" alt="card image" />
+                    <img src="/assets/Sumanth.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>ADARI SAI SUMANTH</h3>
@@ -1006,7 +1006,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Hanselia.svg"
+                      src="/assets/Rishabh Hanselia.svg"
                       alt="card image"
                     />
                   </div>
@@ -1030,7 +1030,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prem.jpg" alt="card image" />
+                    <img src="/assets\prem.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prem Kumar</h3>
@@ -1049,7 +1049,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prateek.jpg" alt="card image" />
+                    <img src="/assets\prateek.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prateek Chandra</h3>
@@ -1069,7 +1069,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/harshit sharma.jpeg"
+                      src="/assets/harshit sharma.jpeg"
                       alt="card image"
                     />
                   </div>
@@ -1091,7 +1091,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/harshit pandey.jpeg"
+                      src="/assets/harshit pandey.jpeg"
                       alt="card image"
                     />
                   </div>
@@ -1112,7 +1112,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/rajiv.jpeg" alt="card image" />
+                    <img src="/assets/rajiv.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rajiv Ranjan</h3>
@@ -1131,7 +1131,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/saurabh.JPG" alt="card image" />
+                    <img src="/assets/saurabh.JPG" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Saurabh Kumar</h3>
