--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -78,13 +78,13 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
-    <link rel="stylesheet" href="../public/css/main.css" />
-    <link rel="stylesheet" href="../public/css/page-css/gallery.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/page-css/gallery.css" />
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
   </head>
 
@@ -95,49 +95,49 @@
       <div class="heading">
         <h1>Placement Gallery</h1>
         <div class="line-style">
-          <img src="../public/assets\Vector 8.svg" alt="line image" />
+          <img src="/assets\Vector 8.svg" alt="line image" />
         </div>
       </div>
       <!-- Photo Grid -->
       <div class="row">
         <div class="column">
-          <img src="../public/gallery/2.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/5.png" style="max-width: 100%" />
-          <img src="../public/gallery/10.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/11.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/12.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/13.png" style="max-width: 100%" />
-          <img src="../public/gallery/1.jpg" style="max-width: 100%" />
+          <img src="/gallery/2.jpg" style="max-width: 100%" />
+          <img src="/gallery/5.png" style="max-width: 100%" />
+          <img src="/gallery/10.jpg" style="max-width: 100%" />
+          <img src="/gallery/11.jpg" style="max-width: 100%" />
+          <img src="/gallery/12.jpg" style="max-width: 100%" />
+          <img src="/gallery/13.png" style="max-width: 100%" />
+          <img src="/gallery/1.jpg" style="max-width: 100%" />
         </div>
 
         <div class="column">
-          <img src="../public/gallery/6.png" style="max-width: 100%" />
-          <img src="../public/gallery/15.png" style="max-width: 100%" />
-          <img src="../public/gallery/16.png" style="max-width: 100%" />
-          <img src="../public/gallery/3.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/4.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/5.png" style="max-width: 100%" />
-          <img src="../public/gallery/14.png" style="max-width: 100%" />
+          <img src="/gallery/6.png" style="max-width: 100%" />
+          <img src="/gallery/15.png" style="max-width: 100%" />
+          <img src="/gallery/16.png" style="max-width: 100%" />
+          <img src="/gallery/3.jpg" style="max-width: 100%" />
+          <img src="/gallery/4.jpg" style="max-width: 100%" />
+          <img src="/gallery/5.png" style="max-width: 100%" />
+          <img src="/gallery/14.png" style="max-width: 100%" />
         </div>
 
         <div class="column">
-          <img src="../public/gallery/7.jfif" style="max-width: 100%" />
-          <img src="../public/gallery/8.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/9.png" style="max-width: 100%" />
-          <img src="../public/gallery/1.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/10.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/11.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/12.jpg" style="max-width: 100%" />
+          <img src="/gallery/7.jfif" style="max-width: 100%" />
+          <img src="/gallery/8.jpg" style="max-width: 100%" />
+          <img src="/gallery/9.png" style="max-width: 100%" />
+          <img src="/gallery/1.jpg" style="max-width: 100%" />
+          <img src="/gallery/10.jpg" style="max-width: 100%" />
+          <img src="/gallery/11.jpg" style="max-width: 100%" />
+          <img src="/gallery/12.jpg" style="max-width: 100%" />
         </div>
 
         <div class="column">
-          <img src="../public/gallery/13.png" style="max-width: 100%" />
-          <img src="../public/gallery/14.png" style="max-width: 100%" />
-          <img src="../public/gallery/15.png" style="max-width: 100%" />
-          <img src="../public/gallery/16.png" style="max-width: 100%" />
-          <img src="../public/gallery/3.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/4.jpg" style="max-width: 100%" />
-          <img src="../public/gallery/6.png" style="max-width: 100%" />
+          <img src="/gallery/13.png" style="max-width: 100%" />
+          <img src="/gallery/14.png" style="max-width: 100%" />
+          <img src="/gallery/15.png" style="max-width: 100%" />
+          <img src="/gallery/16.png" style="max-width: 100%" />
+          <img src="/gallery/3.jpg" style="max-width: 100%" />
+          <img src="/gallery/4.jpg" style="max-width: 100%" />
+          <img src="/gallery/6.png" style="max-width: 100%" />
         </div>
       </div>
     </div>
