--- a/views/institute-page.ejs
+++ b/views/institute-page.ejs
@@ -77,16 +77,16 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
-    <link rel="stylesheet" href="../public/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
-    <link rel="stylesheet" href="../public/css\page-css\institute-page.css" />
+    <link rel="stylesheet" href="/css\page-css\institute-page.css" />
 
-    <script defer type="text/javascript" src="../public/js/main.js"></script>
+    <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
   <body>
@@ -97,7 +97,7 @@
           <div class="heading">
             <h1>About IIIT Bhagalpur</h1>
             <div class="line-style">
-              <img src="../public/assets/Vector 8.svg" alt="line image" />
+              <img src="/assets/Vector 8.svg" alt="line image" />
             </div>
           </div>
           <div class="social">
@@ -131,7 +131,7 @@
             </p>
           </div>
           <div class="image">
-            <img src="../public/assets\institute.jpg" alt="campus image" />
+            <img src="/assets\institute.jpg" alt="campus image" />
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
           <div class="heading">
             <h1>Programs Offered</h1>
             <div class="line-style">
-              <img src="../public/assets\Vector 8.svg" alt="line image" />
+              <img src="/assets\Vector 8.svg" alt="line image" />
             </div>
           </div>
           <div class="social">
@@ -168,7 +168,7 @@
             </p>
           </div>
           <div class="image-new">
-            <img src="../public/assets/btech.svg" alt="campus image" />
+            <img src="/assets/btech.svg" alt="campus image" />
           </div>
           <div class="contents">
             <h3>OFFERED IN FOLLOWING DEPARTMENTS</h3>
@@ -190,7 +190,7 @@
             </p>
           </div>
           <div class="image-new">
-            <img src="../public/assets/mtech.svg" alt="campus image" />
+            <img src="/assets/mtech.svg" alt="campus image" />
           </div>
           <div class="contents">
             <h3>OFFERED IN FOLLOWING DEPARTMENTS</h3>
@@ -213,7 +213,7 @@
             </p>
           </div>
           <div class="image-new">
-            <img src="../public/assets/phd.svg" alt="campus image" />
+            <img src="/assets/phd.svg" alt="campus image" />
           </div>
           <div class="contents">
             <h3>OFFERED IN FOLLOWING DEPARTMENTS</h3>
