--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -77,19 +77,19 @@
 
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
-    <link rel="stylesheet" href="../public/css/main.css" />
-    <link rel="stylesheet" href="../public/css\page-css\login-page.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css\page-css\login-page.css" />
 
-    <script defer type="text/javascript" src="../public/js/login-page.js"></script>
+    <script defer type="text/javascript" src="/js/login-page.js"></script>
   </head>
 
   <body>
     <section class="login-page">
       <div class="login-container">
         <div class="header-div">
-          <img src="../public/assets/square-logo.png" alt="college" />
+          <img src="/assets/square-logo.png" alt="college" />
         </div>
         <div class="content-div">
           <div class="title">
