--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -3,7 +3,7 @@
     class="nav-logo"
     onclick="window.location.href='https://www.iiitbh.ac.in/';"
   >
-    <img src="../public/assets/new-logo.png" alt="college" />
+    <img src="/assets/new-logo.png" alt="college" />
   </div>
   <div class="nav-list">
     <div class="nav-item">
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="hamburger">
-    <img class="burger" src="../public/assets\hamburger.svg" alt="hamburger" />
+    <img class="burger" src="/assets\hamburger.svg" alt="hamburger" />
     <div class="menu">
       <div class="menu-items">
         <div class="phonenav">
@@ -90,7 +90,7 @@
           <div class="menu-item">Help</div>
         </div>
       </div>
-      <img class="cross" src="../public/assets\cross.svg" alt="cross" />
+      <img class="cross" src="/assets\cross.svg" alt="cross" />
     </div>
   </div>
 </nav>
