--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -77,17 +77,17 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
 
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
-    <link rel="stylesheet" href="../public/css\main.css" />
-    <link rel="stylesheet" href="../public/css\page-css\for-recruiters.css" />
+    <link rel="stylesheet" href="/css\main.css" />
+    <link rel="stylesheet" href="/css\page-css\for-recruiters.css" />
 
-    <script defer type="text/javascript" src="../public/js/stats.js"></script>
+    <script defer type="text/javascript" src="/js/stats.js"></script>
     <script defer type="text/javascript" src="./js/main.js"></script>
   </head>
 
@@ -101,7 +101,7 @@
           </div>
           <div class="content-fr">
             <div class="card">
-              <img src="../public/assets/placement-details_23.png" alt="" />
+              <img src="/assets/placement-details_23.png" alt="" />
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
           </div>
           <div class="content-fr">
             <div class="card">
-              <img src="../public/assets/placement-details_22.png" alt="" />
+              <img src="/assets/placement-details_22.png" alt="" />
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@
           </div>
           <div class="content-fr">
             <div class="card">
-              <img src="../public/assets/placement-details_21.png" alt="" />
+              <img src="/assets/placement-details_21.png" alt="" />
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
               <div class="team-grid">
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sohail.svg" alt="card image" />
+                    <img src="/assets/Sohail.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Sohail Khan</h3>
@@ -159,7 +159,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Shiva Patel.svg"
+                      src="/assets/Shiva Patel.svg"
                       alt="card image"
                     />
                   </div>
@@ -184,7 +184,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Agrawal.svg"
+                      src="/assets/Rishabh Agrawal.svg"
                       alt="card image"
                     />
                   </div>
@@ -209,7 +209,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Isha Chaudhary.svg"
+                      src="/assets/Isha Chaudhary.svg"
                       alt="card image"
                     />
                   </div>
@@ -234,7 +234,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Divya Bhattacharya.svg"
+                      src="/assets/Divya Bhattacharya.svg"
                       alt="card image"
                     />
                   </div>
@@ -259,7 +259,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Tarun Kannaojia.svg"
+                      src="/assets/Tarun Kannaojia.svg"
                       alt="card image"
                     />
                   </div>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sumanth.jpeg" alt="card image" />
+                    <img src="/assets/Sumanth.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>ADARI SAI SUMANTH</h3>
@@ -306,7 +306,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Hanselia.svg"
+                      src="/assets/Rishabh Hanselia.svg"
                       alt="card image"
                     />
                   </div>
@@ -330,7 +330,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prem.jpg" alt="card image" />
+                    <img src="/assets\prem.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prem Kumar</h3>
@@ -349,7 +349,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prateek.jpg" alt="card image" />
+                    <img src="/assets\prateek.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prateek Chandra</h3>
@@ -369,7 +369,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/harshit sharma.jpeg"
+                      src="/assets/harshit sharma.jpeg"
                       alt="card image"
                     />
                   </div>
@@ -391,7 +391,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/harshit pandey.jpeg"
+                      src="/assets/harshit pandey.jpeg"
                       alt="card image"
                     />
                   </div>
@@ -412,7 +412,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/rajiv.jpeg" alt="card image" />
+                    <img src="/assets/rajiv.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rajiv Ranjan</h3>
@@ -431,7 +431,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/saurabh.JPG" alt="card image" />
+                    <img src="/assets/saurabh.JPG" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Saurabh Kumar</h3>
@@ -526,7 +526,7 @@
           </div>
           <div class="content-fr">
             <div class="card">
-              <img src="../public/assets/placement-details_23.png" alt="" />
+              <img src="/assets/placement-details_23.png" alt="" />
             </div>
           </div>
         </div>
@@ -536,7 +536,7 @@
           </div>
           <div class="content-fr">
             <div class="card">
-              <img src="../public/assets/placement-details_22.png" alt="" />
+              <img src="/assets/placement-details_22.png" alt="" />
             </div>
           </div>
         </div>
@@ -546,7 +546,7 @@
           </div>
           <div class="content-fr">
             <div class="card">
-              <img src="../public/assets/placement-details_21.png" alt="" />
+              <img src="/assets/placement-details_21.png" alt="" />
             </div>
           </div>
         </div>
@@ -564,7 +564,7 @@
               <div class="team-grid">
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sohail.svg" alt="card image" />
+                    <img src="/assets/Sohail.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Sohail Khan</h3>
@@ -584,7 +584,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Shiva Patel.svg"
+                      src="/assets/Shiva Patel.svg"
                       alt="card image"
                     />
                   </div>
@@ -609,7 +609,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Agrawal.svg"
+                      src="/assets/Rishabh Agrawal.svg"
                       alt="card image"
                     />
                   </div>
@@ -634,7 +634,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Isha Chaudhary.svg"
+                      src="/assets/Isha Chaudhary.svg"
                       alt="card image"
                     />
                   </div>
@@ -659,7 +659,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Divya Bhattacharya.svg"
+                      src="/assets/Divya Bhattacharya.svg"
                       alt="card image"
                     />
                   </div>
@@ -684,7 +684,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Tarun Kannaojia.svg"
+                      src="/assets/Tarun Kannaojia.svg"
                       alt="card image"
                     />
                   </div>
@@ -708,7 +708,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/Sumanth.jpeg" alt="card image" />
+                    <img src="/assets/Sumanth.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>ADARI SAI SUMANTH</h3>
@@ -731,7 +731,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/Rishabh Hanselia.svg"
+                      src="/assets/Rishabh Hanselia.svg"
                       alt="card image"
                     />
                   </div>
@@ -755,7 +755,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prem.jpg" alt="card image" />
+                    <img src="/assets\prem.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prem Kumar</h3>
@@ -774,7 +774,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets\prateek.jpg" alt="card image" />
+                    <img src="/assets\prateek.jpg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Prateek Chandra</h3>
@@ -794,7 +794,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/harshit sharma.jpeg"
+                      src="/assets/harshit sharma.jpeg"
                       alt="card image"
                     />
                   </div>
@@ -816,7 +816,7 @@
                 <div class="team-card">
                   <div class="card-img">
                     <img
-                      src="../public/assets/harshit pandey.jpeg"
+                      src="/assets/harshit pandey.jpeg"
                       alt="card image"
                     />
                   </div>
@@ -837,7 +837,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/rajiv.jpeg" alt="card image" />
+                    <img src="/assets/rajiv.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rajiv Ranjan</h3>
@@ -856,7 +856,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img src="../public/assets/saurabh.JPG" alt="card image" />
+                    <img src="/assets/saurabh.JPG" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Saurabh Kumar</h3>
