--- a/views/student-page.ejs
+++ b/views/student-page.ejs
@@ -58,11 +58,11 @@
     <meta name="og:country-name" content="INDIA" />
     <title></title>
 
-    <link rel="stylesheet" href="../public/fontawesome-free-6.1.2-web/css/all.min.css">
-    <link rel="stylesheet" href="../public/css/main.css">
-    <link rel="stylesheet" href="../public/css\page-css\student-page.css">
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css\page-css\student-page.css">
 
-    <script defer type="text/javascript" src="../public/js/profile.js"></script>
+    <script defer type="text/javascript" src="/js/profile.js"></script>
 </head>
 
 <body>
@@ -73,13 +73,13 @@
                     <a href="#" id="logout">Go Back</a>
                 </div>
                 <div class="institute-logo">
-                    <img src="../public/assets\Screenshot 2022-04-10 235928.png" alt="">
+                    <img src="/assets\Screenshot 2022-04-10 235928.png" alt="">
                 </div>
             </div>
             <div class="side-container">
                 <div class="profile">
                     <div class="profile-img">
-                        <img src="../public/assets/blank-profile-picture-973460.svg" alt="img" id="profile-pic">
+                        <img src="/assets/blank-profile-picture-973460.svg" alt="img" id="profile-pic">
                     </div>
                     <div class="profile-name">
                         <h3>
@@ -125,7 +125,7 @@
                         <a href="/">Go Back</a>
                     </div>
                     <div class="institute-logo">
-                        <img src="../public/assets\Screenshot 2022-04-10 235928.png" alt="">
+                        <img src="/assets\Screenshot 2022-04-10 235928.png" alt="">
                     </div>
                 </div>
                 <div class="bottom-div">
