--- a/views/visitors.ejs
+++ b/views/visitors.ejs
@@ -22,13 +22,13 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
-    <link rel="stylesheet" href="../public/assets/main.css" />
-    <link rel="stylesheet" href="../public/assets\page-css\visitors.css" />
+    <link rel="stylesheet" href="/assets/main.css" />
+    <link rel="stylesheet" href="/assets\page-css\visitors.css" />
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
     <meta
       name="keywords"
@@ -85,7 +85,7 @@
     <meta name="og:region" content="Bhagalpur" />
     <meta name="og:postal-code" content="813210" />
     <meta name="og:country-name" content="INDIA" />
-    <script defer type="text/javascript" src="../public/js/main.js"></script>
+    <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
   <body>
@@ -118,7 +118,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/amazon.svg" alt="Amazon" />
+                  <img src="/assets/amazon.svg" alt="Amazon" />
                 </div>
               </div>
               <div class="grid-item">
@@ -128,7 +128,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/microsoft.svg" alt="Microsoft" />
+                  <img src="/assets/microsoft.svg" alt="Microsoft" />
                 </div>
               </div>
               <div class="grid-item">
@@ -138,7 +138,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/Synopsys.svg" alt="Synopsys" />
+                  <img src="/assets/Synopsys.svg" alt="Synopsys" />
                 </div>
               </div>
               <div class="grid-item">
@@ -148,7 +148,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/nykaa.svg" alt="nykaa" />
+                  <img src="/assets/nykaa.svg" alt="nykaa" />
                 </div>
               </div>
               <div class="grid-item">
@@ -158,7 +158,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/mediadotnet.svg" alt="Media.net" />
+                  <img src="/assets/mediadotnet.svg" alt="Media.net" />
                 </div>
               </div>
               <div class="grid-item">
@@ -168,7 +168,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/codenation.svg" alt="Trilogy" />
+                  <img src="/assets/codenation.svg" alt="Trilogy" />
                 </div>
               </div>
               <div class="grid-item">
@@ -178,7 +178,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/jio.svg" alt="Jio" />
+                  <img src="/assets/jio.svg" alt="Jio" />
                 </div>
               </div>
               <div class="grid-item">
@@ -188,7 +188,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/tata.svg" alt="Tata" />
+                  <img src="/assets/tata.svg" alt="Tata" />
                 </div>
               </div>
               <div class="grid-item">
@@ -198,7 +198,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/intuit.svg" alt="Intuit" />
+                  <img src="/assets/intuit.svg" alt="Intuit" />
                 </div>
               </div>
               <div class="grid-item">
@@ -208,7 +208,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/ibm.svg" alt="IBM" />
+                  <img src="/assets/ibm.svg" alt="IBM" />
                 </div>
               </div>
               <div class="grid-item">
@@ -218,7 +218,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/publicis.svg" alt="Publicis" />
+                  <img src="/assets/publicis.svg" alt="Publicis" />
                 </div>
               </div>
               <div class="grid-item">
@@ -228,7 +228,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/infosys.svg" alt="Infosys" />
+                  <img src="/assets/infosys.svg" alt="Infosys" />
                 </div>
               </div>
               <div class="grid-item">
@@ -239,7 +239,7 @@
                 </div>
                 <div class="grid-item-img">
                   <img
-                    src="../public/assets/techolution.svg"
+                    src="/assets/techolution.svg"
                     alt="Techolution"
                   />
                 </div>
@@ -251,7 +251,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/vahan.svg" alt="Vahan" />
+                  <img src="/assets/vahan.svg" alt="Vahan" />
                 </div>
               </div>
               <div class="grid-item">
@@ -261,7 +261,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/Samsung.svg" alt="Samsung" />
+                  <img src="/assets/Samsung.svg" alt="Samsung" />
                 </div>
               </div>
               <div class="grid-item">
@@ -271,7 +271,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/deloitte.svg" alt="Deloitte" />
+                  <img src="/assets/deloitte.svg" alt="Deloitte" />
                 </div>
               </div>
               <div class="grid-item">
@@ -281,7 +281,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/toothsi.svg" alt="toothsi" />
+                  <img src="/assets/toothsi.svg" alt="toothsi" />
                 </div>
               </div>
               <div class="grid-item">
@@ -292,7 +292,7 @@
                 </div>
                 <div class="grid-item-img">
                   <img
-                    src="../public/assets/ni.svg"
+                    src="/assets/ni.svg"
                     alt="National Instruments"
                   />
                 </div>
@@ -304,7 +304,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img src="../public/assets/practo.svg" alt="Practo" />
+                  <img src="/assets/practo.svg" alt="Practo" />
                 </div>
               </div>
               <div class="grid-item">
@@ -315,7 +315,7 @@
                 </div>
                 <div class="grid-item-img">
                   <img
-                    src="../public/assets/mac_software.svg"
+                    src="/assets/mac_software.svg"
                     alt="Mac Software"
                   />
                 </div>
@@ -327,32 +327,32 @@
             <div class="logo-grid-acad">
               <div class="grid-item-acad">
                 <div class="grid-item-acad-img">
-                  <img src="../public/assets/iit-bhu.svg" alt="IIT BHU" />
+                  <img src="/assets/iit-bhu.svg" alt="IIT BHU" />
                 </div>
               </div>
               <div class="grid-item-acad">
                 <div class="grid-item-acad-img">
-                  <img src="../public/assets/iiit-r.svg" alt="IITR" />
+                  <img src="/assets/iiit-r.svg" alt="IITR" />
                 </div>
               </div>
               <div class="grid-item-acad">
                 <div class="grid-item-acad-img">
-                  <img src="../public/assets/iit-k.svg" alt="IITK" />
+                  <img src="/assets/iit-k.svg" alt="IITK" />
                 </div>
               </div>
               <div class="grid-item-acad">
                 <div class="grid-item-acad-img">
-                  <img src="../public/assets/cdac.svg" alt="CDAC" />
+                  <img src="/assets/cdac.svg" alt="CDAC" />
                 </div>
               </div>
               <div class="grid-item-acad">
                 <div class="grid-item-acad-img">
-                  <img src="../public/assets/iit-j.svg" alt="IITJ" />
+                  <img src="/assets/iit-j.svg" alt="IITJ" />
                 </div>
               </div>
               <div class="grid-item-acad">
                 <div class="grid-item-acad-img">
-                  <img src="../public/assets/iit-m.svg" alt="IITM" />
+                  <img src="/assets/iit-m.svg" alt="IITM" />
                 </div>
               </div>
             </div>
