--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,12 +79,12 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../public/assets/fevicon.svg"
+      href="/assets/fevicon.svg"
     />
-    <link rel="stylesheet" href="../public/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link
       rel="stylesheet"
-      href="../public/fontawesome-free-6.1.2-web/css/all.min.css"
+      href="/fontawesome-free-6.1.2-web/css/all.min.css"
     />
 
     <script
@@ -93,7 +93,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script defer type="text/javascript" src="../public/js/main.js"></script>
+    <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
   <body>
@@ -102,11 +102,13 @@
         <div class="rotator">
           <div class="rotate"></div>
           <div class="loader-logo">
-            <img src="../public/assets/square-logo.png" />
+            <img src="/assets/square-logo.png" />
           </div>
         </div>
       </div>
     </section> -->
+    <%# var path=require('path')%>
+    <%# console.log(path.resolve(__dirname,'/assets/fevicon.svg'))%>
     <section class="after-load">
       <%-include("./nav.ejs")%>
       <section class="banner">
@@ -155,7 +157,7 @@
                   <div class="students-btns">
                     <button
                       class="rst"
-                      onclick="window.open('../public/assets/Student_IIIT_Bhagalpur_CV.docx');"
+                      onclick="window.open('/assets/Student_IIIT_Bhagalpur_CV.docx');"
                     >
                       Resume Template
                     </button>
@@ -164,7 +166,7 @@
                     </button>
                   </div>
                   <div class="query-app">
-                    <img src="../public/assets\qr-code.png" alt="qr-code" />
+                    <img src="/assets\qr-code.png" alt="qr-code" />
                   </div>
                 </div>
               </div>
@@ -180,16 +182,16 @@
                         onclick="window.open('/gallery');"
                       >
                         <!-- <div class="carousel-item">
-                                            <img src="../public/assets\carousel-img-1.png" alt="img-1">
+                                            <img src="/assets\carousel-img-1.png" alt="img-1">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../public/assets\carousel-img-2.png" alt="img-2">
+                                            <img src="/assets\carousel-img-2.png" alt="img-2">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../public/assets/news-1.jpeg" alt="img-3">
+                                            <img src="/assets/news-1.jpeg" alt="img-3">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../public/assets/news-3.jpeg" alt="img-4">
+                                            <img src="/assets/news-3.jpeg" alt="img-4">
                                         </div> -->
                       </div>
                       <!-- <div class="scroller">
@@ -204,7 +206,7 @@
                       >
                         <img
                           class="status-img"
-                          src="../public/assets\status-art.svg"
+                          src="/assets\status-art.svg"
                           alt=""
                         />
                       </div>
@@ -212,13 +214,13 @@
                         class="inner-card"
                         onclick="window.open('/stats','_target');"
                       >
-                        <img src="../public/assets\placement-data.svg" alt="" />
+                        <img src="/assets\placement-data.svg" alt="" />
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="flipper fade">
-                  <img src="../public/assets\flip-btn-up.svg" alt="" />
+                  <img src="/assets\flip-btn-up.svg" alt="" />
                 </div>
               </div>
               <div class="card2-new">
@@ -228,30 +230,30 @@
                       <li>
                         <div
                           class="btn-item"
-                          onclick="window.open('../public/assets/Plcement_Brochure_21_22.pdf');"
+                          onclick="window.open('/assets/Plcement_Brochure_21_22.pdf');"
                         >
-                          <img src="../public/assets/doc-icon.svg" alt="" />
+                          <img src="/assets/doc-icon.svg" alt="" />
                           <h3>Placement Brochure</h3>
                         </div>
                       </li>
                       <li>
                         <div
                           class="btn-item"
-                          onclick="window.open('../public/assets/Branchwise_Brchure.pdf');"
+                          onclick="window.open('/assets/Branchwise_Brchure.pdf');"
                         >
-                          <img src="../public/assets/doc-icon.svg" alt="" />
+                          <img src="/assets/doc-icon.svg" alt="" />
                           <h3>Branchwise Brochure</h3>
                         </div>
                       </li>
                       <li>
                         <div class="btn-item" onclick="window.open('/stats');">
-                          <img src="../public/assets/doc-icon.svg" alt="" />
+                          <img src="/assets/doc-icon.svg" alt="" />
                           <h3>Placement Statistics</h3>
                         </div>
                       </li>
                       <li>
                         <div class="btn-item" onclick="window.open('/stats');">
-                          <img src="../public/assets/doc-icon.svg" alt="" />
+                          <img src="/assets/doc-icon.svg" alt="" />
                           <h3>Internship Information</h3>
                         </div>
                       </li>
@@ -259,7 +261,7 @@
                   </div>
                 </div>
                 <div class="flipper fade">
-                  <img src="../public/assets\flip-btn-down.svg" alt="" />
+                  <img src="/assets\flip-btn-down.svg" alt="" />
                 </div>
               </div>
             </div>
@@ -326,7 +328,7 @@
             <div class="heading">
               <h1>Past Recruiters</h1>
               <div class="line-style">
-                <img src="../public/assets\Vector 8.svg" alt="line image" />
+                <img src="/assets\Vector 8.svg" alt="line image" />
               </div>
             </div>
             <div class="more">
@@ -339,35 +341,35 @@
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets\microsoft.svg"
+                    src="/assets\microsoft.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets\amazon.svg"
+                    src="/assets\amazon.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets/Synopsys.svg"
+                    src="/assets/Synopsys.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets/mediadotnet.svg"
+                    src="/assets/mediadotnet.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets/codenation.svg"
+                    src="/assets/codenation.svg"
                     alt="recruit-img"
                   />
                 </div>
@@ -376,35 +378,35 @@
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets/intuit.svg"
+                    src="/assets/intuit.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets/ibm.svg"
+                    src="/assets/ibm.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets\Samsung.svg"
+                    src="/assets\Samsung.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets\tata.svg"
+                    src="/assets\tata.svg"
                     alt="recruit-img"
                   />
                 </div>
                 <div class="marquee-list">
                   <img
                     class="recruit-img"
-                    src="../public/assets\nykaa.svg"
+                    src="/assets\nykaa.svg"
                     alt="recruit-img"
                   />
                 </div>
@@ -419,7 +421,7 @@
             <div class="heading">
               <h1>Students Achievements</h1>
               <div class="line-style">
-                <img src="../public/assets\Vector 8.svg" alt="line image" />
+                <img src="/assets\Vector 8.svg" alt="line image" />
               </div>
             </div>
           </div>
@@ -492,7 +494,7 @@
             <div class="heading">
               <h1>About IIIT Bhagalpur</h1>
               <div class="line-style">
-                <img src="../public/assets\Vector 8.svg" alt="line image" />
+                <img src="/assets\Vector 8.svg" alt="line image" />
               </div>
             </div>
             <div class="social">
@@ -527,7 +529,7 @@
               </p>
             </div>
             <div class="image">
-              <img src="../public/assets\institute.jpg" alt="campus image" />
+              <img src="/assets\institute.jpg" alt="campus image" />
             </div>
           </div>
         </div>
@@ -538,7 +540,7 @@
             <div class="heading">
               <h1>Director's Message</h1>
               <div class="line-style">
-                <img src="../public/assets\Vector 8.svg" alt="line image" />
+                <img src="/assets\Vector 8.svg" alt="line image" />
               </div>
             </div>
             <div class="social">
@@ -573,7 +575,7 @@
               <h3>Prof. Arvind Choubey</h3>
             </div>
             <div class="image-d">
-              <img src="../public/assets\director.jpg" alt="director image" />
+              <img src="/assets\director.jpg" alt="director image" />
             </div>
           </div>
         </div>
@@ -584,7 +586,7 @@
             <div class="heading">
               <h1>Contact US</h1>
               <div class="line-style">
-                <img src="../public/assets\Vector 8.svg" alt="line image" />
+                <img src="/assets\Vector 8.svg" alt="line image" />
               </div>
             </div>
             <div class="more">
@@ -595,7 +597,7 @@
             <div class="contact-cards">
               <div class="contact-card">
                 <div class="card-img">
-                  <img src="../public/assets\Gaurav.jpg" alt="card image" />
+                  <img src="/assets\Gaurav.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Dr. Gaurav Kumar</h3>
@@ -615,7 +617,7 @@
               <div class="contact-card">
                 <div class="card-img">
                   <img
-                    src="../public/assets\Sangeeta_sharma.jpg"
+                    src="/assets\Sangeeta_sharma.jpg"
                     alt="card image"
                   />
                 </div>
@@ -637,7 +639,7 @@
           <div class="row-down_c">
             <div class="connection">
               <div class="image_c">
-                <img src="../public/gallery/8.jpg" alt="connection image" />
+                <img src="/gallery/8.jpg" alt="connection image" />
               </div>
               <div class="content_c">
                 <h2>More Ways to get Connected</h2>
@@ -666,7 +668,7 @@
     </section>
 
     <!-- <script>
-      ["../public/js/main.js","../public/js/slider.js"].forEach(
+      ["/js/main.js","/js/slider.js"].forEach(
         function (src) {
           var script = document.createElement("script");
           script.src = src;
