--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="nav-item">
-      <a href="https://calyxpod.com/">Placement portal</a>
+      <a href="https://iiitbh.pod.ai/" target="_blank">Placement portal</a>
     </div>
   </div>
   <div class="hamburger">
